--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-    <head>
-      <meta charset="utf-8">
-      <title>Old is Gold</title>
-    </head>
-    <body>
-        <header>
-      <h1><a href="/">Old is Gold</a></h1>
-        </header>
-
-        <article class="">
-            <h2><a href="/">First Semester</a></h2>
-            <p>This is the question of first semester BBA.</p>
-        </article>
-
-        <article class="">
-            <h2><a href="/">Second Semester</a></h2>
-            <p>This is the question of second semester BBA.</p>
-        </article>
-    </body>
+  <head>
+    <meta charset="utf-8">
+    <title>Question Bank</title>
+      <header>
+          <h1><a href="/">Old is Gold</a></h1>
+      </header>
+  </head>
+      <body>
+          {% for post in posts %}
+              <article>
+                  <time>published: {{ post.published_date }}</time>
+                  <h2><a href="">{{ post.title }}</a></h2>
+                  <p>{{ post.text|linebreaksbr }}</p>
+              </article>
+          {% endfor %}
+      </body>
 </html>
