--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,19 +1,13 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Question Bank</title>
-      <header>
-          <h1><a href="/">Old is Gold</a></h1>
-      </header>
-  </head>
-      <body>
-          {% for post in posts %}
-              <article>
-                  <time>published: {{ post.published_date }}</time>
-                  <h2><a href="">{{ post.title }}</a></h2>
-                  <p>{{ post.text|linebreaksbr }}</p>
-              </article>
-          {% endfor %}
-      </body>
-</html>
+{% extends 'blog/base.html' %}
+
+{% block content %}
+      {% for post in posts %}
+          <article class="post">
+              <time class="date">
+                  {{ post.published_date }}
+              </time>
+              <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+              <p>{{ post.text|linebreaksbr }}</p>
+          </article>
+      {% endfor %}
+{% endblock %}
